3.1/appendix/glossary.md
<div class="glossary">
# Glossary

> The following are specialized terms which users of TAO may frequently run into while using the program to author tests, administrate them, or generate assessment reports.

## Action Bar
The menu, in the form of a blue bar, situated under the black Assessment Builder Bar, which appears across the top of all TAO web pages.

## Adaptive Item
An [Item](../items/what-is-an-item.md) which changes either its Interaction, its scoring, or both, following unsatisfactory attempts by the Test-taker to provide a correct response. Adaptivity is usually used to adapt assessment questions to learning experiences for the candidate, guiding him or her through the Item while scoring performance. Advanced.

## Adaptive Test
A Test which changes the presentation of [Items](../items/what-is-an-item.md) based on Test-taker response. Generally achieved through the use of pre-conditions and branching. Advanced.

## Assessment Builder Bar
The menu, in the form of a black bar, across the top of all TAO web pages.

## Assessment Variable
Technical term for the final score assigned to a Test-taker's performance in an [Item](../items/what-is-an-item.md) Session or a [Test](../tests/what-is-a-test.md) Session.

## Associable Hotspot Panel
The panel on the left of the Hotspot Interaction which is being edited, from which the shapes needed for the hotspots can be chosen.

## Attempt
A single candidate interaction with an [Item](../items/what-is-an-item.md) that possibly assigns values to or updates an associated Response Variable.

## Authoring System
A system used by authors to create and edit [Items](../items/what-is-an-item.md) and [Tests](../tests/what-is-a-test.md). [TAO](../introduction/take-a-tour.md) is an example of an authoring system.

##Back office
The administrative interface of TAO, which manages items, tests, test-takers and so on.

## Base-type
A predefined data type used to define a value set from which Item Variables are drawn.

## Basic Item
An [Item](../items/what-is-an-item.md) which contains one and only one [Interaction](../interactions/what-is-an-interaction.md).

## Candidate Session
The time during which the Candidate or Test-taker is interacting with an [Assessment Item](../items/what-is-an-item.md) as part of an Attempt. An Attempt may extend across more than one Candidate Session (such as when a Test-taker terminates one Candidate Session in order to answer another question first, and then starts another Candidate Session to return to the original question).

## Canvas
The main area in the middle of the screen for the user to define the contents of Items, Tests, etc.

## Class
A group of related Items, Tests, etc. Folders in the Library represent Classes.

## Cloning Engine
A system for creating multiple similar items (or Item Clones) from an Item Template. [TAO](../introduction/take-a-tour.md) uses a Cloning Engine to assist users in authoring Items.

## Common Interactions
An Interaction type which covers many of the simple interactions that are commonly used in testing.

## Common Interactions Library
The first section of the Interactions Library which appears on the left when editing an item. It contains the Common Interactions used in TAO.

## Composite Item
An [Item](../items/what-is-an-item.md) which contains more than one [Interaction](../interactions/what-is-an-interaction.md).

## Container
An aggregate data type that can contain multiple values of unmodified Base-types, or even be empty.

## Custom Interactions
An Interaction type which provides library space for miscellaneous Interactions developed by the user.

## Delivery
An assembly of all information required to assign and send out Tests to selected Test-Takers.

## Delivery Library
The Library of existing Deliveries, situated in the panel on the left.

## Delivery Library Panel
The panel on the left, where existing Deliveries are shown.

## Delivery System
A system which administers and delivers assessments to Test-takers through the use of a delivery engine, or a process that coordinates both Item Delivery and [response evaluation (scoring)](../items/item-scoring-rules.md) and Feedback.

##End Attempt
The possibility to exit a test item before it is complete.

##Extension
The components, or building blocks, of which TAO is made. Every extension adds a new set of features.

##Extensions Manager
Architecture used to view and manage installed and available extensions.

## Feedback
Any material presented to the candidate as a result of an outcome variable meeting or exceeding particular conditions. This can include integrated, [modal](../items/modal-feedback.md), and Test Feedback.

## Front Office
The test-taker screen.

##Global Manager
The global manager has access to the entire platform apart from the system components such as the extension manager.

## Graphic
A picture or other image upon which Graphic Interactions are based. They often form the background on which the Interaction is then placed.

## Graphic Interactions
An Interaction type which covers the Graphical Interactions commonly used in testing.

## Graphic Interactions Library
The third section of the Interactions Library which appears on the left when editing an Item. It contains the Graphic Interactions used in TAO.

## Group
Organized collections of Test-Takers who take the same assessments throughout the duration of a course of study.

## Inline Interactions
An Interaction type which covers the text-based interactions commonly used in testing.

## Inline Interactions Library
The second section of the Interactions Library which appears on the left when editing an item. It contains the Inline Interactions used in TAO.

## Interaction
The part of an [Item](../items/what-is-an-item.md) which allows the candidate to interact with an assessment, selecting or constructing a response.

## Interactions Library
The panel which appears on the left when editing an item contains the Interactions Library. It contains the all the available Interactions used in TAO.

## Interaction Properties Panel
The panel which appears on the right when an Interaction is being edited, where it is possible to define certain properties pertaining to this Interaction.

## Integrated Feedback
Feedback which is integrated into an [Item](../items/what-is-an-item.md). Unlike with [Modal Feedback](../items/modal-feedback.md), Test-takers may update their responses while viewing Integrated Feedback.

## Item
The smallest exchangeable object in an assessment. An Item is more than a 'Question' in that it also contains the contextual instructions, the processing to be applied to the Test-taker's response(s), and any Feedback (including hints and solutions). May also be called Assessment Item.

## Item Clone
An [Item](../items/what-is-an-item.md) which is similar to others created by an Item Template. These are identical except for designated variables called Template Variables.

## Item Fragment
Part of an [Item](../items/what-is-an-item.md) managed independently from other parts. If it introduces all Items in a set, such a fragment is often referred to as a set leader.

## Item Scoring Rules See [Response Processing](../items/item-scoring-rules.md).

## Item Session
The accumulation of all Test-taker Attempts at a particular [Item](../items/what-is-an-item.md).

## Item Set
A group of [Items](../items/what-is-an-item.md) which share common characteristics.

## Item Template
A template used for producing large numbers of similar [Items](../items/what-is-an-item.md), often called Cloned Items. These will have one or more designated Template Variables, and will be governed by a set of Template processing rules which are assigned these values. These may be produced by a special purpose Cloning Engine, such as [TAO](../introduction/take-a-tour.md).

## Item Variable
A variable which records Test-taker responses and any outcomes assigned during [response processing](../items/item-scoring-rules.md) during an Item Session. As a special kind of Assessment Variable, Item Variables are also used to define Item Templates.

## Library
The panel on the left represents the various Libraries. There are Libraries for existing Items, Tests, Deliveries, etc, as well as for possible Interaction types.

## Library Panel
The panel on the left, where existing Items, Tests, Deliveries, etc, as well as possible Interaction types, are shown.

## List Style
The possible answers will be presented to the Test-taker in the form of a list.

## Material
All static text, image, or media objects which are intended for the Test-taker rather than for being interpreted by a processing system. [Interactions](../interactions/what-is-an-interaction.md) are not considered to be material.

## Math Expression
Math expressions can be entered using MathML or Latex Math.

## Media Formats
For maximum compatibility across browsers, mp4 or mpeg formats should be used for video (ACC codec for audio + H264 for video codec), and mp3 or ogg should be used for audio.

## Metadata
Information described in the properties of Interactions, Items, Tests, or Deliveries, including everything except their content.

## Modal Feedback
Feedback which is not integrated into an [Item's](../items/what-is-an-item.md) body during presentation to the Test-taker.

## Multiple Response
A Response Variable that serves as a container for multiple values taken from a value set defined by a base-type. These are processed as an unordered list, and may be empty.

## Non-adaptive Item
An [Item](../items/what-is-an-item.md) which does not change following attempts made by a Test-taker.

## Object Bank
A collection of objects used during an assessment, including [Items](../items/what-is-an-item.md), Item Fragments, or Test parts.

## Ordered Response
A Response Variable which is a Container for multiple values taken from a value set defined by a Base-type. These are processed as an ordered list (sequence) of values, but may be empty.

## Outcome
The result of an [Assessment Test](../tests/what-is-a-test.md) or [Item](../items/what-is-an-item.md). These are represented by one or more Outcome Variables.

## Outcome Processing
The process which adds up the values of [Item](../items/what-is-an-item.md) Outcomes (or Responses) in order to produce [Test](../tests/what-is-a-test.md) Outcomes.

## Outcome Variable
Variables taken from outcome declarations. Values are set either from a default given within the declaration or by a response rule encountered during [Response Processing (for Item outcomes)](../items/item-scoring-rules.md) or Outcome Processing (for Test Outcomes).

## Pattern
Patterns can be set using regular expressions in the QTI creator. If the Test-taker's Response does not match the Pattern, an error is shown. The Response cannot be submitted until the input is corrected in line with the pattern.

## Pool
A special type of Object Bank which includes related [Items](../items/what-is-an-item.md) transported together with metadata which describes the group as a whole.

## Pre-formatted Text
Indicates that the text to be entered by the Test-taker is pre-formatted and should be rendered in a way consistent with the definition of pre in XHTML.

##Proctoring Screen
The screen from which the proctor administrates tests.

## Properties
Properties define attributes, or characteristics, pertaining to Interactions, Items, Tests, or Deliveries.

## Properties Panel
The panel in which it is possible to define certain properties pertaining to the Interaction, Item, Test, Delivery etc, which is being edited. Usually this is on the right.

## Radio Button
A test type whereby the Test-taker is only permitted to select one answer. If an additional answer is clicked, the selection will move to this choice, leaving the first one unselected.

## Resource Manager
A method by which to manage and select media files for use in Interactions.

## Response
Data provided by the Test-taker through interaction with an [Item](../items/what-is-an-item.md) or Item Part. Associated values are represented as Response Variables.

## Response Processing
The process by which Response Variable values are scored and Item Outcome values are assigned.

## Response Properties Panel
The panel on the right of the Interaction being edited, where it is possible to define the properties pertaining to the Response to this Interaction.

## Response Variable
Variables taken from Response declarations and bound to [Interactions](../interactions/what-is-an-interaction.md) in the [Item body](../items/what-is-an-item.md), they record the candidate's Responses.

## Results

Results in TAO are the output from a Delivery, and contain the test details for each Test-taker sitting a particular assessment.

## Results Table

The Results from a Delivery in TAO are displayed in a Results Table.

## Scoring Engine
The part of the assessment system that processes Test-taker Responses and scores them based on [Response Processing](../items/item-scoring-rules.md) rules.

## Single Response
A Response Variable which takes a single value from the value set defined by a Base-type.

## Shared Stimulus
A stimulus is a piece of information which sets the context for a question or a series of questions. A Shared Stimulus is one that is shared between multiple Items.

## Test Feedback
Feedback presented to a Test-taker, based on final score values.

## Template Processing
Rules used to set values for Template Variables. These are typically set by a random process which selects a specific clone to be used for an Item Session.

## Template Variable
Variables taken from template declarations which record values which render an Item Template unique. These values determine the clone within a set defined by an Item Template which will be used for a given Item Session.

## Test (or Assessment)
An organized collection of [Items](../items/what-is-an-item.md) which are used to measure performance of a Candidate with respect to that person's level of mastery of a given subject. Assessments contain all instructions required for navigation through a sequence of Items. They also calculate the final score earned by the Test-taker.

## Test Library
The Library of existing Tests, situated in the panel on the left.

## Test Library Panel
The panel on the left, where existing Tests are shown.

## Test Fragment
Part of a [Test](../tests/what-is-a-test.md) managed independently.

## Test Report
A report describing a [Test](../tests/what-is-a-test.md) Session.

## Test Session
The Interaction of a Candidate with a [Test](../tests/what-is-a-test.md) and the [Items](../items/what-is-an-item.md) it contains.

## Test-taker (or Candidate)
A person who participates in a [Test](../tests/what-is-a-test.md), assessment or exam by answering questions.

## Text Block

A framework with which a block-related interaction can be created.

## Time Dependent Item
An [Item](../items/what-is-an-item.md) which records the accumulated elapsed time for a Candidate Session in a Response Variable, used during [Response Processing](../items/item-scoring-rules.md).

## Time Independent Item
An Item which does not use the accumulated elapsed time during [Response Processing](../items/item-scoring-rules.md).
</div>
